# bbs_based_initialization

./: CMakeLists.txt  README.md  package.xml
config/: bbs_based_initializer.param.yaml
include/: bbs_based_initializer.hpp
launch/: bbs_based_initializer.launch.xml
src/bbs_based_initializer/: bbs_based_initializer.cpp  bbs_based_initializer_node.cpp
